force-app/main/default/objects/Lead/fields/Application_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Policy_Number__c</fullName>
    <label>Application/Policy Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>