force-app/main/default/objects/Lead/fields/Bar_Code_No__c.field-meta.xml
<CustomField>
    <fullName>Bar_Code_No__c</fullName>
    <label>Bar Code No</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>