force-app/main/default/objects/Lead/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>