force-app/main/default/objects/Lead/fields/Customer_Residence_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Residence_Type__c</fullName>
    <label>Customer Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Urben</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>