force-app/main/default/objects/Lead/fields/Date_Of_Birth_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth_Incorporation__c</fullName>
    <label>Date Of Birth/Incorporation</label>
    <type>Date</type>
</CustomField>