force-app/main/default/objects/Lead/fields/Eligibility_for_verif_waiver_or_not__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_for_verif_waiver_or_not__c</fullName>
    <label>Eligibility for verif waiver or not</label>
    <length>50</length>
    <type>Text</type>
</CustomField>