force-app/main/default/objects/Lead/fields/Employer_Corporate_Code__c.field-meta.xml
<CustomField>
    <fullName>Employer_Corporate_Code__c</fullName>
    <label>Employer Corporate Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>