force-app/main/default/objects/Lead/fields/isNew__c.field-meta.xml
<CustomField>
    <fullName>isNew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNew</label>
    <type>Checkbox</type>
</CustomField>