force-app/main/default/objects/Lead/fields/Lead_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sub_Status__c</fullName>
    <label>Lead Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer dropped</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Logged In</fullName>
            </value>
            <value>
                <fullName>New Query</fullName>
            </value>
            <value>
                <fullName>QDE Pending</fullName>
            </value>
            <value>
                <fullName>Offer generated</fullName>
            </value>
            <value>
                <fullName>VKYC Initiation Pending</fullName>
            </value>
            <value>
                <fullName>VKYC Initiated</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>DDE Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>