force-app/main/default/objects/Lead/fields/Number_of_Dialler_handoffs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dialler_handoffs__c</fullName>
    <label>Number of Dialler handoffs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>