force-app/main/default/objects/Lead/fields/Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>Offer_ID__c</fullName>
    <label>Offer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>