force-app/main/default/objects/Lead/fields/Online_Drop_Stage__c.field-meta.xml
<CustomField>
    <fullName>Online_Drop_Stage__c</fullName>
    <label>Online Drop Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>