force-app/main/default/objects/Lead/fields/Segment_Type__c.field-meta.xml
<CustomField>
    <fullName>Segment_Type__c</fullName>
    <label>Segment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>