force-app/main/default/objects/Lead/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Sub_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>