force-app/main/default/objects/Lead/fields/Work_item_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_item_Number__c</fullName>
    <label>Work item Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>